actualizacion Emilia Cole en rama Estilo

--- a/views/index.html
+++ b/views/index.html
@@ -8,10 +8,11 @@
       src="https://kit.fontawesome.com/a3ad730a3f.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
-  <body>
+  <body class="body_index">
     <header>
-      <nav>
+      <nav class="navegador" >
         <ul>
           <li><a href="/">HOME</a></li>
           <li><a href="/about">ABOUT</a></li>
@@ -19,7 +20,7 @@
           <li><a href="/contact">CONTACT</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul id="sociales">
         <li>
           <a href="https://twitter.com/" target="_blank"
             ><i class="fa-brands fa-twitter"></i
@@ -53,12 +54,12 @@
       </ul>
     </header>
     <section>
+      <img src="img/emilia-home.jpg" alt="imagen de portada" class="imagen_emilia_home"/>
       <h3>
         EMILIA <br />
-        COLE
+        COLE //
       </h3>
-      <h1>TWIST IN MY REALITY</h1>
-      <img src="img/emilia-home.jpg" alt="imagen de portada" width="100%" />
+      <h1 class="mi-clase">TWIST IN MY REALITY</h1>
     </section>
   </body>
 </html>
