--- a/views/music.html
+++ b/views/music.html
@@ -8,20 +8,26 @@
       src="https://kit.fontawesome.com/a3ad730a3f.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
-  <body>
+  <body class="body_music">
     <header id="top">
-      <img src="/img/emilia-music-top.jpg" alt="imagen music section" />
-      <nav>
-        <ul>
+      <div class="contenedor_imagen">
+        <img src="/img/emilia-music-top.jpg" alt="imagen music section"/>
+      </div>
+      <div class="contenedor_music">
+      <nav class="navegador_music">
+        <ul class="franja posicion">
           <li><a href="/">HOME</a></li>
           <li><a href="/about">ABOUT</a></li>
           <li><a href="/music">MUSIC</a></li>
           <li><a href="/contact">CONTACT</a></li>
         </ul>
       </nav>
-      <ul>
+     </div>
+     <div class="contenedor_music">
+      <ul id="sociales_music">
         <li>
           <a href="https://twitter.com/" target="_blank"
             ><i class="fa-brands fa-twitter"></i
@@ -53,10 +59,12 @@
           ></a>
         </li>
       </ul>
+     </div>
     </header>
     <section>
+      <h1 class="music">MUSIC //</h1>
       <h4>Direct links</h4>
-      <ul>
+      <ul class="lista_videos">
         <li><a href="#video1">Album</a></li>
         <li><a href="">Video: Organic Love</a></li>
         <li><a href="#video2">Video: Street Light</a></li>
@@ -66,16 +74,16 @@
           ALBUM <br />
           TWIST IN MY REALITY
         </h2>
-        <img src="img/emilia-play-list.png" alt="Imagen del album" />
-        <ol>
-          <il>01 Organic Love | 02:40</il><BR>
-          <il>02 Twist in My Reality | 02:10</il><BR>
-          <il>03 Street Light | 03:28</il><BR>
-          <il>04 Love Dont Live Here Anymore (cover) | 03:49</il>
+        <img src="img/emilia-play-list.png" alt="Imagen del album" class="imagen_emilia"/>
+        <ol class="canciones">
+          <li>01 Organic Love | 02:40</li><BR>
+          <li>02 Twist in My Reality | 02:10</li><BR>
+          <li>03 Street Light | 03:28</li><BR>
+          <li>04 Love Dont Live Here Anymore (cover) | 03:49</li>
         </ol>
-        <A href="#top">Go top</A>
+        <A href="#top" class="button">Go top</A>
       </article>
-      <article id="video1"></article>
+      <article id="video1"><h2 class="titulo_video">VIDEO <br>ORGANIC LOVE</h2></article>
       <iframe
         src="https://player.vimeo.com/video/135166028?h=fdb0646ae5"
         width="640"
@@ -84,19 +92,26 @@
         allow="autoplay; fullscreen; picture-in-picture"
         allowfullscreen
       ></iframe>
+      <ol class="canciones">
+        <li>Directed by VINCE MALC & EMliIA COLE </li><BR>
+        <li>Edited and Flimed by NICOLAS TROY</li><BR>
+        <li>Produced by NIKI HEART</li><BR>
+        <li>Wix Flims LTD</li>
+      </ol>
+      <A href="#top" class="button">Go top</A>
       <article id="video2"></article>
 
       
-      <h2>VIDEO <BR>STREET LIGHT</BR></h2>
+      <h2 class="titulo_video"><strong>VIDEO <BR>STREET LIGHT</BR></strong></h2>
       <article id="video2"></article>
       <iframe src="https://player.vimeo.com/video/134861419?h=24e3183108" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-      <ol>
-        <il>Directed by VINCE MALC & EMILIA COLE </il><BR>
-        <il>Edited and Filmed by NICOLAS TROY</il><BR>
-        <il>Produced by NIKI HEART</il><BR>
-        <il>Wix Films LTD</il>
+      <ol class="canciones">
+        <li>Directed by VINCE MALC & EMliIA COLE </li><BR>
+        <li>Edited and Flimed by NICOLAS TROY</li><BR>
+        <li>Produced by NIKI HEART</li><BR>
+        <li>Wix Flims LTD</li>
       </ol>
-      <A href="#top">Go top</A>
+      <A href="#top" class="button">Go top</A>
     </section>
   </body>
 </html>
