--- a/views/about.html
+++ b/views/about.html
@@ -1,68 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emilia Cole - About</title>
-    <script src="https://kit.fontawesome.com/a3ad730a3f.js" crossorigin="anonymous"></script>
-</head>
+    <script
+      src="https://kit.fontawesome.com/a3ad730a3f.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
 
-<body>
+  <body class="body_about">
     <header id="top">
-        <nav>
-          <ul>
-            <li><a href="/">HOME</a></li>
-            <li><a href="/about">ABOUT</a></li>
-            <li><a href="/music">MUSIC</a></li>
-            <li><a href="/contact">CONTACT</a></li>
-          </ul>
-        </nav>
+      <div class="contenedor_about franja" >
+      <nav class="navegador_about">
         <ul>
-          <li>
-            <a href="https://twitter.com/" target="_blank"
-              ><i class="fa-brands fa-twitter"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/" target="_blank"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.spotify.com/" target="_blank"
-              ><i class="fa-brands fa-spotify"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.apple.com/" target="_blank"
-              ><i class="fa-brands fa-apple"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.amazon.com/" target="_blank"
-              ><i class="fa-brands fa-amazon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/" target="_blank"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-          </li>
+          <li><a href="/">HOME</a></li>
+          <li><a href="/about">ABOUT</a></li>
+          <li><a href="/music">MUSIC</a></li>
+          <li><a href="/contact">CONTACT</a></li>
         </ul>
-      </header>
-      <img src="/img/emilia-about.jpg" alt="imagen music section" />
-
-      <section> 
-        <h1>ABOUT <BR> EMILIA //</h1>
-
-    <h3>"Seattle-based pop star makes her <br> indie debut with a hauntingly beautiful album"</h3>
-    <p>- John Tirckle, Music Today Post</p>
-
-    <h3>"Emilia Cole is one of the <br> scene's breakout stars"</h3>
-    <p>- John Tirckle, Music Today Post</p>
-</section>
-
-</body>
-
+      </nav>
+    </div>
+    <div class="contenedor_about">
+      <ul id="sociales_about">
+        <li>
+          <a href="https://twitter.com/" target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.spotify.com/" target="_blank"
+            ><i class="fa-brands fa-spotify"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.apple.com/" target="_blank"
+            ><i class="fa-brands fa-apple"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.amazon.com/" target="_blank"
+            ><i class="fa-brands fa-amazon"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+      </ul>
+    </div>
+    </header>
+    <section>
+      <img
+        src="/img/emilia-about.jpg"
+        alt="imagen music section"
+        class="imagen_emilia_about"
+      />
+      <h1 class="emilia_about">
+        ABOUT <br />
+        EMILIA //
+      </h1>
+      <div class="texto_about">
+        <h3>
+          "Seattle-based pop star makes her <br />
+          indie debut with a hauntingly beautiful album"
+        </h3>
+        <p>- John Tirckle, Music Today Post</p>
+        <h3>
+          "Emilia Cole is one of the <br />
+          scene's breakout stars"
+        </h3>
+        <p>- John Tirckle, Music Today Post</p>
+      </div>
+    </section>
+  </body>
 </html>
