--- a/views/contact.html
+++ b/views/contact.html
@@ -8,11 +8,12 @@
       src="https://kit.fontawesome.com/a3ad730a3f.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
-  <body>
+  <body class="body_contact">
     <header>
-      <nav>
+      <nav class="navegador_contact">
         <ul>
           <li><a href="/">HOME</a></li>
           <li><a href="/about">ABOUT</a></li>
@@ -20,7 +21,7 @@
           <li><a href="/contact">CONTACT</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="sociales_contact">
         <li>
           <a href="https://twitter.com/" target="_blank"
             ><i class="fa-brands fa-twitter"></i
@@ -54,8 +55,8 @@
       </ul>
     </header>
     <section>
-      <h1>CONTACT //</h1>
-      <h3>WE ARE HERE</h3>
+      <h1 class="contact">CONTACT //</h1>
+      <h3 class="we_are">WE ARE HERE</h3>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.182370726!2d-0.10159865000000001!3d51.52864165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondres%2C%20Reino%20Unido!5e0!3m2!1ses-419!2sar!4v1697146813856!5m2!1ses-419!2sar"
         width="100%"
@@ -66,30 +67,39 @@
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </section>
-    
-    <h3>CONTACT INFO</h3>
-    <h4>MANAGEMENT | Karen Blanche</h4>
-    <p>
-      <a href="mailto:info@mysite.com">Email: info@mysite.com</a><br />
-      <a href="tel:1234567890">Phone: 123-456-7890</a>
-    </p>
+    <div class="info_h4">
+      <h3 class="contact_info">CONTACT INFO</h3>
+      <h4>MANAGEMENT | Karen Blanche</h4>
+      <p class="mail_phone">
+        <a href="mailto:info@mysite.com">
+          <strong>Email:</strong> info@mysite.com</a
+        ><br />
+        <a href="tel:1234567890"><strong>Phone:</strong> 123-456-7890</a>
+      </p>
 
-    <h4>BOOKING | Daniel Ku</h4>
-    <p>
-      <a href="mailto:info@mysite.com">Email: info@mysite.com</a><br />
-      <a href="tel:1234567890">Phone: 123-456-7890</a>
-    </p>
+      <h4>BOOKING | Daniel Ku</h4>
+      <p>
+        <a href="mailto:info@mysite.com"
+          ><strong>Email:</strong> info@mysite.com</a
+        ><br />
+        <a href="tel:1234567890"><strong>Phone:</strong> 123-456-7890</a>
+      </p>
 
-    <h4>LABEL | Wix Records, Jake Coldman</h4>
-    <p>
-      <a href="mailto:info@mysite.com">Email: info@mysite.com</a><br />
-      <a href="tel:1234567890">Phone: 123-456-7890</a>
-    </p>
+      <h4>LABEL | Wix Records, Jake Coldman</h4>
+      <p>
+        <a href="mailto:info@mysite.com"
+          ><strong>Email:</strong> info@mysite.com</a
+        ><br />
+        <a href="tel:1234567890"><strong>Phone:</strong> 123-456-7890</a>
+      </p>
 
-    <h4>PR | That Girl Pr, Sarah Brookstone</h4>
-    <p>
-      <a href="mailto:info@mysite.com">Email: info@mysite.com</a><br />
-      <a href="tel:1234567890">Phone: 123-456-7890</a>
-    </p>
+      <h4>PR | That Girl Pr, Sarah Brookstone</h4>
+      <p>
+        <a href="mailto:info@mysite.com"
+          ><strong>Email:</strong> info@mysite.com</a
+        ><br />
+        <a href="tel:1234567890"><strong>Phone:</strong> 123-456-7890</a>
+      </p>
+    </div>
   </body>
 </html>
